# car_booking

./: CLAUDE.md  api.py  auth.py  config.py  crud.py  db.py  deps.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
client/: pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/carbooking/client/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  main.dart
client/lib/core/: api_exception.dart  auth_interceptor.dart  config.dart  dio_client.dart  messenger.dart  storage.dart
client/lib/data/: auth_repository.dart  bookings_repository.dart  cars_repository.dart  users_repository.dart
client/lib/models/: booking.dart  booking.freezed.dart  booking.g.dart  booking_with_user.dart  car.dart  car.freezed.dart  car.g.dart  token.dart  token.freezed.dart  token.g.dart  user.dart  user.freezed.dart  user.g.dart
client/lib/state/: all_bookings_controller.dart  auth_controller.dart  bookings_controller.dart  cars_controller.dart  users_controller.dart
client/lib/ui/: router.dart  theme.dart
client/lib/ui/screens/: admin_add_car_screen.dart  admin_users_screen.dart  all_bookings_screen.dart  car_detail_screen.dart  cars_screen.dart  edit_profile_screen.dart  login_screen.dart  my_bookings_screen.dart  profile_screen.dart  register_screen.dart  splash_screen.dart
client/lib/ui/widgets/: auth_scaffold.dart
routers/: bookings.py  cars.py  users.py
